--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -416,21 +416,36 @@ button:hover {
     padding-top: 0.75rem;
   }
 
+  .site-menu-item {
+    width: 100%;
+  }
+
   .site-menu-toggle:checked ~ .site-menu-list {
     display: flex;
   }
 
   .site-menu-item > a,
   .site-menu-details > summary {
+    width: 100%;
+    justify-content: flex-start;
     border-radius: 10px;
     padding: 0.75rem;
   }
 
+  .site-menu-details {
+    width: 100%;
+  }
+
+  .site-menu-details > summary::after {
+    margin-left: auto;
+  }
+
   .site-submenu-list {
     position: static;
+    width: auto;
     min-width: unset;
     box-shadow: none;
-    margin: 0.25rem 0 0.5rem 0.75rem;
+    margin: 0.25rem 0 0.5rem;
     border-radius: 10px;
   }
 }
